style: fixed adaptive styles for the subscribe-block on tablet and mobile devices

--- a/src/styles/subscribe-block/subscribe-block.scss
+++ b/src/styles/subscribe-block/subscribe-block.scss
@@ -15,7 +15,6 @@
 		@media (width >= 768px) and (width <= 1279px) {
 			max-width: 79%;
 			margin: 0;
-			max-width: 320px;
 		}
 		@media (width <= 767px) {
 			max-width: 304px;
@@ -37,7 +36,7 @@
 			border-bottom-left-radius: 32px;
 			border-bottom-right-radius: 90px;
 			border-top-right-radius: 90px;
-			min-height: 498px;
+			max-height: 498px;
 			background-position: 35% 10%;
 		}
 		@media (width <= 767px) {
@@ -65,10 +64,10 @@
 		& *:last-child {
 			margin: 20px 0 85px 0;
 			@media (width <= 1279px) {
-				margin: 10px 0 77px 0;
+				margin: 10px 0 67px 0;
 			}
 			@media (width <= 767px) {
-				margin: 10px 0 82px 0;
+				margin: 10px 0 92px 0;
 			}
 		}
 	}
@@ -132,6 +131,8 @@
 		}
 	}
 	&__success {
+		position: relative;
+		top: 60px;
 		padding: 10px 24px;
 		width: 100%;
 		max-width: 576px;
@@ -147,6 +148,31 @@
 			position: absolute;
 			top: -60px;
 			right: 60px;
+		}
+
+		@media (width <= 1279px) {
+			border-radius: 24px;
+			max-width: 75%;
+			padding: 28px 24px;
+			&::after {
+				transform: scale(0.85);
+				right: -60px;
+			}
+			& p {
+				max-width: 80%;
+			}
+		}
+		@media (width <= 767px) {
+			max-width: 100%;
+			top: 0;
+			padding: 16px 50px 28px 16px;
+			&::after {
+				transform: scale(0.8);
+				right: -45px;
+			}
+			& p {
+				max-width: 100%;
+			}
 		}
 	}
 	&__illustration-wrapper {
