--- a/src/styles/ui/ui.scss
+++ b/src/styles/ui/ui.scss
@@ -251,7 +251,7 @@
 	&:disabled {
 		opacity: 60%;
 	}
-	&:focus {
+	&:focus:not(:active) {
 		border: 2px solid $bg-block;
 	}
 }
@@ -259,6 +259,8 @@
 	position: absolute;
 	z-index: -1;
 	opacity: 0;
+	bottom: 20px;
+	left: 5px;
 	& + label {
 		cursor: pointer;
 		display: inline-flex;
